--- a/basic.css
+++ b/basic.css
@@ -1,3 +1,7 @@
+body {
+    line-height: 1.4;
+}
+
 #main_window {
     position: absolute;
     left: 0;
@@ -13,4 +17,7 @@
 
 .clickable {
     cursor: pointer;
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    text-decoration-color: #FE6C6C;
 }
