better clickable style
The underline doesn't work for mathjax elements.

--- a/basic.css
+++ b/basic.css
@@ -17,7 +17,8 @@ body {
 
 .clickable {
     cursor: pointer;
-    text-decoration-line: underline;
-    text-decoration-style: wavy;
-    text-decoration-color: #FE6C6C;
+}
+
+.clickable:after {
+    content: " ⓘ";
 }
